<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_title_home"/>

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_orders"
        android:title="@string/navigation_title_order"/>

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/navigation_title_cart"/>

    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/navigation_title_wishlist"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/navigation_title_profile"/>
</menu>