<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/sign_in_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title"/>

    <ImageView
        android:id="@+id/lokmart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lokmart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/app_description"/>

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/regular"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/lokmart"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/fragment_sign_in_title"
        android:textSize="24sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toTopOf="@id/description"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/fragment_sign_in_description"
        app:layout_constraintBottom_toTopOf="@id/usernameLayout"
        android:layout_marginBottom="27dp"
        android:textSize="14sp"
        android:textColor="@color/soft_gray"
        android:fontFamily="@font/regular"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="18dp"
        app:boxStrokeColor="@android:color/transparent"
        app:endIconTint="@color/orange"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/soft_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:fontFamily="@font/medium"
            android:textColor="@color/dark"
            android:inputType="text"
            android:hint="@string/fragment_sign_in_username"
            android:paddingBottom="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="29dp"
        app:boxStrokeColor="@android:color/transparent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/orange"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/soft_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:fontFamily="@font/medium"
            android:textColor="@color/dark"
            android:hint="@string/fragment_sign_in_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/extra_bold"
        android:text="@string/fragment_sign_in_button"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/forgot" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/sign_in"
        app:layout_constraintEnd_toEndOf="@id/sign_in"
        app:layout_constraintStart_toStartOf="@id/sign_in"
        app:layout_constraintTop_toTopOf="@id/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="42dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/fragment_sign_in_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/fragment_sign_in_no_account"
        android:textColor="@color/soft_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:fontFamily="@font/semi_bold"
        android:paddingHorizontal="6dp"
        android:paddingVertical="8dp"
        android:text="@string/fragment_sign_in_sign_up"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sign_up_text" />


</androidx.constraintlayout.widget.ConstraintLayout>